--- a/unit-project/project-1/starter-code/UPDATEDproject1-starter.ipynb
+++ b/unit-project/project-1/starter-code/UPDATEDproject1-starter.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: "
+    "Answer: Return customer indicator (yes/no) to suggest which free-tier customer will convert to paying customer."
    ]
   },
   {
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: "
+    "Answer: Age, gender, location, profession, and customer useage data - days since last log in and activity score."
    ]
   },
   {
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: "
+    "Answer: January to April 2015"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer: "
+    "Answer: Demographic and useage data will predict which free-tier customers will convert to paying customers."
    ]
   },
   {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -90,6 +90,438 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv(\"../assets/admissions.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>admit</th>\n",
+       "      <th>gre</th>\n",
+       "      <th>gpa</th>\n",
+       "      <th>prestige</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>3.61</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>660.0</td>\n",
+       "      <td>3.67</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>640.0</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>520.0</td>\n",
+       "      <td>2.93</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   admit    gre   gpa  prestige\n",
+       "0      0  380.0  3.61       3.0\n",
+       "1      1  660.0  3.67       3.0\n",
+       "2      1  800.0  4.00       1.0\n",
+       "3      1  640.0  3.19       4.0\n",
+       "4      0  520.0  2.93       4.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>admit</th>\n",
+       "      <th>gre</th>\n",
+       "      <th>gpa</th>\n",
+       "      <th>prestige</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>400.000000</td>\n",
+       "      <td>398.000000</td>\n",
+       "      <td>398.00000</td>\n",
+       "      <td>399.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.317500</td>\n",
+       "      <td>588.040201</td>\n",
+       "      <td>3.39093</td>\n",
+       "      <td>2.486216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.466087</td>\n",
+       "      <td>115.628513</td>\n",
+       "      <td>0.38063</td>\n",
+       "      <td>0.945333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>220.000000</td>\n",
+       "      <td>2.26000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>520.000000</td>\n",
+       "      <td>3.13000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>580.000000</td>\n",
+       "      <td>3.39500</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>660.000000</td>\n",
+       "      <td>3.67000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>4.00000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            admit         gre        gpa    prestige\n",
+       "count  400.000000  398.000000  398.00000  399.000000\n",
+       "mean     0.317500  588.040201    3.39093    2.486216\n",
+       "std      0.466087  115.628513    0.38063    0.945333\n",
+       "min      0.000000  220.000000    2.26000    1.000000\n",
+       "25%      0.000000  520.000000    3.13000    2.000000\n",
+       "50%      0.000000  580.000000    3.39500    2.000000\n",
+       "75%      1.000000  660.000000    3.67000    3.000000\n",
+       "max      1.000000  800.000000    4.00000    4.000000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>admit</th>\n",
+       "      <th>gre</th>\n",
+       "      <th>gpa</th>\n",
+       "      <th>prestige</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>127.0</td>\n",
+       "      <td>127.000000</td>\n",
+       "      <td>126.000000</td>\n",
+       "      <td>126.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>618.897638</td>\n",
+       "      <td>3.489206</td>\n",
+       "      <td>2.150794</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>108.884884</td>\n",
+       "      <td>0.371655</td>\n",
+       "      <td>0.921455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>300.000000</td>\n",
+       "      <td>2.420000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>540.000000</td>\n",
+       "      <td>3.220000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>620.000000</td>\n",
+       "      <td>3.545000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>680.000000</td>\n",
+       "      <td>3.757500</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       admit         gre         gpa    prestige\n",
+       "count  127.0  127.000000  126.000000  126.000000\n",
+       "mean     1.0  618.897638    3.489206    2.150794\n",
+       "std      0.0  108.884884    0.371655    0.921455\n",
+       "min      1.0  300.000000    2.420000    1.000000\n",
+       "25%      1.0  540.000000    3.220000    1.000000\n",
+       "50%      1.0  620.000000    3.545000    2.000000\n",
+       "75%      1.0  680.000000    3.757500    3.000000\n",
+       "max      1.0  800.000000    4.000000    4.000000"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[(df[\"admit\"] == 1)].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>admit</th>\n",
+       "      <th>gre</th>\n",
+       "      <th>gpa</th>\n",
+       "      <th>prestige</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>273.0</td>\n",
+       "      <td>271.000000</td>\n",
+       "      <td>272.000000</td>\n",
+       "      <td>273.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>573.579336</td>\n",
+       "      <td>3.345404</td>\n",
+       "      <td>2.641026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>116.052798</td>\n",
+       "      <td>0.376773</td>\n",
+       "      <td>0.917198</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>220.000000</td>\n",
+       "      <td>2.260000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>3.080000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>580.000000</td>\n",
+       "      <td>3.340000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>660.000000</td>\n",
+       "      <td>3.610000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       admit         gre         gpa    prestige\n",
+       "count  273.0  271.000000  272.000000  273.000000\n",
+       "mean     0.0  573.579336    3.345404    2.641026\n",
+       "std      0.0  116.052798    0.376773    0.917198\n",
+       "min      0.0  220.000000    2.260000    1.000000\n",
+       "25%      0.0  500.000000    3.080000    2.000000\n",
+       "50%      0.0  580.000000    3.340000    3.000000\n",
+       "75%      0.0  660.000000    3.610000    3.000000\n",
+       "max      0.0  800.000000    4.000000    4.000000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[(df[\"admit\"] == 0)].describe()"
    ]
   },
   {
@@ -105,12 +537,12 @@
    "source": [
     "Answer:\n",
     "\n",
-    "(Use the markdown table below as a template)\n",
-    "\n",
-    "Variable | Description | Type of Variable\n",
-    "---| ---| ---\n",
-    "Var 1 | 0 = not thing 1 = thing | categorical\n",
-    "Var 2 | thing in unit X | continuous \n"
+    "Variable | Description       | Type of Variable\n",
+    "---|---| ---\n",
+    "Admit | Indicates whether admitted (1) to grad school or not (0) | categorical\n",
+    "GRE | standardized exam, integer (800 max) | continuous \n",
+    "GPA | Grade Point Average, (4.00 max)  | continuous \n",
+    "Prestige | Rank of applicant's undergraduate alma mater (1-highest to 4-lowest), | categorical \n"
    ]
   },
   {
@@ -131,7 +563,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer: Return admit indicator (1 = admitted, 0 = not) to predict applicant's admission result."
    ]
   },
   {
@@ -145,7 +577,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer:  GRE score, GPA, and Prestige of School"
    ]
   },
   {
@@ -159,7 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer:  not applicable"
    ]
   },
   {
@@ -173,7 +605,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer:  Standardized exam (GRE), GPA, and prestige of applicant's undergraduate school will predict if applicant is admitted to graduate school."
    ]
   },
   {
@@ -187,7 +619,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer: Which predictor is more linearly correlated with graduate school admission?"
    ]
   },
   {
@@ -217,7 +649,7 @@
     "collapsed": true
    },
    "source": [
-    "Answer: "
+    "Answer: To summarize the main characteristics of a data set, for example calculating measures of central tendancy, plotting, and determining correlation."
    ]
   },
   {
@@ -231,7 +663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer:  That it is representation of the population."
    ]
   },
   {
@@ -247,7 +679,7 @@
     "collapsed": true
    },
    "source": [
-    "Answer: "
+    "Answer: variance, standard deviation, range, interquartile range"
    ]
   },
   {
@@ -263,7 +695,7 @@
     "collapsed": true
    },
    "source": [
-    "Answer: "
+    "Answer: It may skew the mean.  However, we can use the median as a comparison."
    ]
   },
   {
@@ -277,7 +709,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer:  By checking for data that may be outside of the normal range of a boxplot (less than Q1-1.5*IQR & greater than Q3+1.5*IQR)."
    ]
   },
   {
@@ -293,7 +725,7 @@
     "collapsed": true
    },
    "source": [
-    "Answer: "
+    "Answer: When one predictor variable is more linearly correlated with outcome variable more than other predictors."
    ]
   },
   {
@@ -307,7 +739,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer:  Compute correlation matrix of the data."
    ]
   },
   {
