--- a/classes/06/notebooks/classification-knn_intro_to_classification-lesson/intro-to-classification-knn.ipynb
+++ b/classes/06/notebooks/classification-knn_intro_to_classification-lesson/intro-to-classification-knn.ipynb
@@ -379,7 +379,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# A:\n",
@@ -904,13 +906,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prediction: [1 2 2 1 1]\n",
+      "actual:  [1 2 2 2 1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.7865168539325843"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# A:"
+    "# A:\n",
+    "#1. import\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "#2. instantiate\n",
+    "knn = KNeighborsClassifier(n_neighbors = 5)\n",
+    "\n",
+    "#3. fit (aka \"train\" on your labeled data)\n",
+    "\n",
+    "#first value of fit is matrix, and second is single array\n",
+    "knn.fit(wine_df, y)\n",
+    "\n",
+    "#4. Make new predictions or score\n",
+    "wine_sample = wine_df.sample(5)\n",
+    "\n",
+    "print \"prediction:\", knn.predict(wine_sample)\n",
+    "print \"actual: \", y[wine_sample.index]\n",
+    "\n",
+    "knn.score(wine_df,y)\n"
    ]
   },
   {
@@ -982,13 +1019,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    0.398876\n",
+       "0    0.331461\n",
+       "2    0.269663\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# A:"
+    "# A:\n",
+    "pd.Series(y).value_counts() / len(y)"
    ]
   },
   {
@@ -1001,13 +1051,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7865168539325843"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# A:"
+    "y_hat = knn.predict(wine_df)\n",
+    "(y_hat == y).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7865168539325843"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A:\n",
+    "#equivalent to above\n",
+    "knn.score(wine_df, y)"
    ]
   },
   {
@@ -1035,13 +1117,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# A:"
+    "features = wine_loader.feature_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0.7584269662921348, 'alcohol'), (0.702247191011236, 'malic_acid'), (0.5898876404494382, 'ash'), (0.61235955056179781, 'alcalinity_of_ash'), (0.61235955056179781, 'magnesium'), (0.7134831460674157, 'total_phenols'), (0.8370786516853933, 'flavanoids'), (0.5730337078651685, 'nonflavanoid_phenols'), (0.6853932584269663, 'proanthocyanins'), (0.7696629213483146, 'color_intensity'), (0.7471910112359551, 'hue'), (0.7584269662921348, 'od280/od315_of_diluted_wines'), (0.7696629213483146, 'proline')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A:\n",
+    "#1. import\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "#2. instantiate\n",
+    "knn = KNeighborsClassifier(n_neighbors = 5)\n",
+    "\n",
+    "#3. fit (aka \"train\" on your labeled data)\n",
+    "\n",
+    "#first value of fit is matrix, and second is single array\n",
+    "\n",
+    "score =[]\n",
+    "for x in features:\n",
+    "    a = wine_df[[x]]\n",
+    "    knn.fit(a, y)\n",
+    "    score.append(knn.score(a, y))\n",
+    "\n",
+    "# A:\n",
+    "#Score\n",
+    "print zip(score, wine_loader.feature_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9550561797752809"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = wine_df[[\"flavanoids\", \"color_intensity\"]]\n",
+    "knn.fit(a, y)\n",
+    "knn.score(a, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(29, 0.9044943820224719)\n",
+      "(28, 0.9044943820224719)\n",
+      "(27, 0.9044943820224719)\n",
+      "(26, 0.9157303370786517)\n",
+      "(25, 0.9157303370786517)\n",
+      "(24, 0.9157303370786517)\n",
+      "(23, 0.9157303370786517)\n",
+      "(22, 0.9101123595505618)\n",
+      "(21, 0.9157303370786517)\n",
+      "(20, 0.9157303370786517)\n",
+      "(19, 0.9213483146067416)\n",
+      "(18, 0.9157303370786517)\n",
+      "(17, 0.9213483146067416)\n",
+      "(16, 0.9269662921348315)\n",
+      "(15, 0.9269662921348315)\n",
+      "(14, 0.93258426966292129)\n",
+      "(13, 0.9213483146067416)\n",
+      "(12, 0.93258426966292129)\n",
+      "(11, 0.93258426966292129)\n",
+      "(10, 0.9213483146067416)\n",
+      "(9, 0.9213483146067416)\n",
+      "(8, 0.9269662921348315)\n",
+      "(7, 0.9269662921348315)\n",
+      "(6, 0.9269662921348315)\n",
+      "(5, 0.9550561797752809)\n",
+      "(4, 0.9438202247191011)\n",
+      "(3, 0.9550561797752809)\n",
+      "(2, 0.9550561797752809)\n",
+      "(1, 1.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k in range(1, 30)[::-1]:\n",
+    "    knn = KNeighborsClassifier(n_neighbors = k)\n",
+    "    knn.fit(a,y)\n",
+    "    print(k, knn.score(a, y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature selection strategies\n",
+    "\n",
+    "-Segmenting based on the different class labels\n",
+    "    -Group bys\n",
+    "    -Overlaid histograms\n",
+    "-Trial and error\n",
+    "-Brute force"
    ]
   },
   {
@@ -1055,13 +1258,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(29, 0.7247191011235955)\n",
+      "(28, 0.7247191011235955)\n",
+      "(27, 0.7247191011235955)\n",
+      "(26, 0.7247191011235955)\n",
+      "(25, 0.7303370786516854)\n",
+      "(24, 0.7247191011235955)\n",
+      "(23, 0.7247191011235955)\n",
+      "(22, 0.7247191011235955)\n",
+      "(21, 0.7247191011235955)\n",
+      "(20, 0.7191011235955056)\n",
+      "(19, 0.7247191011235955)\n",
+      "(18, 0.7247191011235955)\n",
+      "(17, 0.7247191011235955)\n",
+      "(16, 0.7303370786516854)\n",
+      "(15, 0.7191011235955056)\n",
+      "(14, 0.7359550561797753)\n",
+      "(13, 0.7584269662921348)\n",
+      "(12, 0.7752808988764045)\n",
+      "(11, 0.7696629213483146)\n",
+      "(10, 0.7921348314606742)\n",
+      "(9, 0.7752808988764045)\n",
+      "(8, 0.7752808988764045)\n",
+      "(7, 0.7471910112359551)\n",
+      "(6, 0.7752808988764045)\n",
+      "(5, 0.7865168539325843)\n",
+      "(4, 0.8258426966292135)\n",
+      "(3, 0.8707865168539326)\n",
+      "(2, 0.8764044943820225)\n",
+      "(1, 1.0)\n"
+     ]
+    }
+   ],
    "source": [
-    "# A: "
+    "# A: \n",
+    "\n",
+    "for k in range(1, 30)[::-1]:\n",
+    "    knn = KNeighborsClassifier(n_neighbors = k)\n",
+    "    knn.fit(wine_df,y)\n",
+    "    print(k, knn.score(wine_df, y))\n"
    ]
   },
   {
@@ -1084,15 +1326,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 98,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# A:\n",
     "from sklearn.model_selection import train_test_split\n",
-    "\n"
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(wine_df, y, test_size = 0.25)"
    ]
   },
   {
@@ -1104,12 +1345,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(29, 0.66666666666666663)\n",
+      "(28, 0.64444444444444449)\n",
+      "(27, 0.64444444444444449)\n",
+      "(26, 0.62222222222222223)\n",
+      "(25, 0.64444444444444449)\n",
+      "(24, 0.66666666666666663)\n",
+      "(23, 0.68888888888888888)\n",
+      "(22, 0.68888888888888888)\n",
+      "(21, 0.68888888888888888)\n",
+      "(20, 0.66666666666666663)\n",
+      "(19, 0.66666666666666663)\n",
+      "(18, 0.64444444444444449)\n",
+      "(17, 0.66666666666666663)\n",
+      "(16, 0.62222222222222223)\n",
+      "(15, 0.64444444444444449)\n",
+      "(14, 0.55555555555555558)\n",
+      "(13, 0.59999999999999998)\n",
+      "(12, 0.59999999999999998)\n",
+      "(11, 0.59999999999999998)\n",
+      "(10, 0.62222222222222223)\n",
+      "(9, 0.64444444444444449)\n",
+      "(8, 0.66666666666666663)\n",
+      "(7, 0.64444444444444449)\n",
+      "(6, 0.62222222222222223)\n",
+      "(5, 0.71111111111111114)\n",
+      "(4, 0.66666666666666663)\n",
+      "(3, 0.64444444444444449)\n",
+      "(2, 0.55555555555555558)\n",
+      "(1, 0.68888888888888888)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for k in range(1, 30)[::-1]:\n",
+    "    knn = KNeighborsClassifier(n_neighbors = k)\n",
+    "    knn.fit(X_train,y_train)\n",
+    "    print(k, knn.score(X_test, y_test))"
+   ]
   },
   {
    "cell_type": "markdown",
